--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.9.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
