--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "vite"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "global": "^4.4.0",
+    "net": "^1.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-paypal-button-v2": "^2.6.3",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "6.9.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.7.3"
